fix list gaps

--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: column;
     max-height: calc(100vh - 520px);
+    gap: 16px
 }
 
 .elementLine {
@@ -23,13 +24,13 @@
 }
 
 .elementLineInner {
-    composes: pt-4 from '~@ya.praktikum/react-developer-burger-ui-components/dist/ui/box.css';
+    /*composes: pt-4 pb-2 from '~@ya.praktikum/react-developer-burger-ui-components/dist/ui/box.css';*/
     composes: elementLine;
 }
 
 .elementLineTop {
     composes: elementLine;
-    /*composes: pl-2 from '~@ya.praktikum/react-developer-burger-ui-components/dist/ui/box.css';*/
+    composes: pb-4 from '~@ya.praktikum/react-developer-burger-ui-components/dist/ui/box.css';
 
 }
 .elementLineBottom {
